--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
-[package]
-name = "ostp"
-version = "0.1.0"
-authors = ["Jinof <Jinof@foxmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+    "starter",
+]
 
-[dependencies]
-structopt = "0.3.13"
+
